--- a/HTML-CSS/Portfolio/index.html
+++ b/HTML-CSS/Portfolio/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>My Portfolio</title>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
     </head>
     <body background="https://i.ytimg.com/vi/kRzpp7ZxEgw/maxresdefault.jpg">
